--- a/css/styles.css
+++ b/css/styles.css
@@ -389,7 +389,8 @@ li.item {
   line-height: 1.62;
   letter-spacing: 0.03em;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter .button:focus,
@@ -413,7 +414,6 @@ li.item {
   display: block;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
 }
 .portfolio-link:hover,
 .portfolio-link:focus {
@@ -431,7 +431,6 @@ li.item {
   flex-basis: calc(100% / 3 - 30px);
   border: 1px solid #eeeeee;
 }
-
 
 .portfolio-link:hover .portfolio-overley-text,
 .portfolio-link:focus .portfolio-overley-text {
@@ -527,7 +526,8 @@ li.item {
   justify-content: center;
   height: 92px;
   /* ------- */
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:hover,
 .clients-link:focus,
@@ -593,25 +593,25 @@ li.item {
   align-items: center;
   justify-content: center;
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
- 
 }
 
-.backdrop.is-hidden .modal{
-transform: scale(2);
+.backdrop.is-hidden .modal {
+  transform: scale(2);
 }
 
 .modal {
   position: relative;
   width: 528px;
   min-height: 182px;
- 
+
   padding: 15px;
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -638,6 +638,14 @@ transform: scale(2);
   fill: currentColor;
 }
 
-.btn-close:hover{
+.btn-close:hover {
   color: var(--accent);
+}
+.form {
+  padding: 40px;
+}
+.label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 8px;
 }
