--- a/css/styles.css
+++ b/css/styles.css
@@ -647,8 +647,16 @@ li.item {
   margin-left: auto;
   margin-right: auto;
 }
+
+.form-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+
 .form-field {
-  /* outline: 1px solid blue; */
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
@@ -667,10 +675,33 @@ textarea,
   border: 1px solid #2196f3;
 }
 
-.form-field label {
+.form-field label,
+.form-field placeholder {
   margin-bottom: 4px;
+
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+}
+
+.form-field placeholder {
+  color: rgba(117, 117, 117, 0.5);
 }
 
 textarea {
   resize: none;
+}
+ 
+.form-btn {
+  background: var(--accent);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--white-color);
+  width: 200px;
+height: 50px;
+
+}
+.form-button {
+  display: flex;
+  justify-content: center;
 }
