--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,10 @@ button {
 .footer-sosial {
   margin-left: 70px;
 }
+.footer-submit {
+  margin-left: 93px;
+}
+
 .footer-sosial .sosial-list {
   padding: 0;
   color: var(--white-color);
@@ -684,24 +688,41 @@ textarea,
   letter-spacing: 0.01em;
 }
 
-.form-field placeholder {
+.form-field::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
 
 textarea {
   resize: none;
 }
- 
+
 .form-btn {
   background: var(--accent);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: var(--white-color);
   width: 200px;
-height: 50px;
-
+  height: 50px;
+  fill: var(--white-color);
 }
+
 .form-button {
   display: flex;
   justify-content: center;
+  align-content: center;
+}
+.footer-form-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-input {
+  width: 350px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); */
+  border-radius: 4px;
+  background: transparent;
+  padding: 15px 16px;
+  margin-right: 12px;
 }
