--- a/css/styles.css
+++ b/css/styles.css
@@ -673,7 +673,8 @@ li.item {
 textarea,
 .form-field input {
   width: 100%;
-  padding: 12px 16px;
+  outline: none;
+  padding: 12px 16px 12px 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
@@ -705,6 +706,10 @@ textarea,
 
 textarea {
   resize: none;
+  padding-left: 16px;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
 }
 
 .form-btn {
@@ -717,8 +722,14 @@ textarea {
   height: 50px;
   align-items: center;
   justify-content: center;
+  fill: var(--white-color);
 }
-.form-btn svg {
+.form-btn-send {
+  display: block;
+  margin: 0 auto;
+}
+
+form .form-btn svg {
   margin-left: 10px;
 }
 
